# hybrid-multi-agent-orchestration

./: .env.example  .gitignore  COMMANDS.md  README.md  main.py  monitor_gemini_calls.py  postman_collection.json  pyproject.toml  run.py  test_gemini_parser.py  test_peer_communication_api.py
agents/: __init__.py  base_agent.py  broadband_agent.py  main_agent.py  sequential_orchestrator.py  utilities_agent.py
api/: __init__.py  main.py
benchmark/: __init__.py  benchmark.py
bus/: __init__.py  redis_bus.py
core/: __init__.py  agent_registry.py  config.py  dead_letter_queue.py  gemini_parser.py  logger.py  openrouter_parser.py  policy_enforcer.py  schemas.py
demo/: app.py
tests/: __init__.py  conftest.py  test_agents.py
tests/integration/: test_direct_agent_communication.py  test_end_to_end_workflow.py  test_failure_recovery.py  test_peer_to_peer_communication.py
tests/unit/: test_agents.py  test_policy_enforcer.py
