[project]
name = "jay-multi-agent"
version = "0.1.0"
description = "Hybrid multi-agent orchestration system for Just Move In"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Arya Lakshmi M", email = "22cb006@psgtech.ac.in" }
]
keywords = [
    "multi-agent",
    "orchestration",
    "event-driven",
    "redis",
    "fastapi",
    "hybrid-architecture"
]

dependencies = [
    "fastapi>=0.135.1",
    "google-generativeai>=0.8.6",
    "httpx>=0.28.1",
    "plotly>=5.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.0.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "redis>=7.2.1",
    "streamlit>=1.28.0",
    "uvicorn>=0.41.0",
]

[project.urls]
Homepage = "https://github.com/22CB006/hybrid-multi-agent-orchestration"
Repository = "https://github.com/22CB006/hybrid-multi-agent-orchestration"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "api", "benchmark", "bus", "core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]

[tool.coverage.run]
source = ["agents", "bus", "core", "api"]
omit = ["tests/*", "benchmark/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
